🔧 FIX|Responsive exploration component on mobile

--- a/src/scss/layouts/_CreateEvent.scss
+++ b/src/scss/layouts/_CreateEvent.scss
@@ -98,6 +98,13 @@
       }
     }
   }
+  @include mob {
+    flex-direction: column;
+    width: 100%;
+    &__container {
+      width: 100%;
+    }
+  }
 }
 
 .createEventForm {
